--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </div>
 
     <div class="menu-wrapper">
-        <button class="active" onclick="handleClick(event, 'menu-links')">Links</button>
-        <button onclick="handleClick(event, 'menu-posts')">Posts</button>
+        <button class="active" onclick="handleClick(event, 'links')">Links</button>
+        <button onclick="handleClick(event, 'posts')">Posts</button>
     </div>
 
     <div class="content-wrapper">
@@ -88,7 +88,7 @@
             </a>
         </div>
         <div class="posts">
-            
+            <div class="content">Yoo</div>
         </div>
     </div>
 
