--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Julian's Links</title>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <script src="https://profile.codersrank.io/widget/widget.js"></script>
 </head>
 
 <body>
@@ -88,7 +89,9 @@
             </a>
         </div>
         <div class="posts">
-            <div class="content">Yoo</div>
+            <div class="content">
+                <codersrank-widget username="julians22"></codersrank-widget>
+            </div>
         </div>
     </div>
 
