--- a/index.html
+++ b/index.html
@@ -90,7 +90,18 @@
         </div>
         <div class="posts">
             <div class="content">
-                <codersrank-widget username="julians22"></codersrank-widget>
+                <codersrank-widget
+                username="julians22"
+                layout="vertical"
+                badges="3"
+                ></codersrank-widget>
+            </div>
+            <div class="content">
+                <span class="title-text">Boring with my profile?</span>
+                <p>Lets listen some playlist here!</p>
+                <br>
+                <iframe src="https://open.spotify.com/embed/playlist/4MXtILCOEt8uMh9p2eBfqs" height="380" frameborder="0"
+                    allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
         </div>
     </div>
