--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta Tags -->
     <title>Julian's Links</title>
+    <meta name="title" content="Julian's Links">
+    <meta name="description" content="Social media link shares, host using github pages.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://julians22.github.io/">
+    <meta property="og:title" content="Julian's Links">
+    <meta property="og:description" content="Social media link shares, host using github pages.">
+    <meta property="og:image" content="https://julians22.github.io/assets/images/undraw_under_construction_46pa.svg">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://julians22.github.io/">
+    <meta property="twitter:title" content="Julian's Links">
+    <meta property="twitter:description" content="Social media link shares, host using github pages.">
+    <meta property="twitter:image" content="https://julians22.github.io/assets/images/undraw_under_construction_46pa.svg">
+
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="https://profile.codersrank.io/widget/widget.js"></script>
@@ -67,23 +85,23 @@
 
     <div class="content-wrapper">
         <div class="links">
-            <a href="">
+            <a href="https://www.instagram.com/juliangerung/" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/images/icons/instagram.png" alt="" srcset="">
                 Instagram
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/in/deanabner/" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/images/icons/linkedin.png" alt="" srcset="">
                 LinkedIn
             </a>
-            <a href="">
+            <a href="https://github.com/julians22" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/images/icons/github.png" alt="" srcset="">
                 Github
             </a>
-            <a href="">
+            <a href="https://twitter.com/superNaed" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/images/icons/twitter.png" alt="" srcset="">
                 Twitter
             </a>
-            <a href="">
+            <a href="https://www.facebook.com/pansjul/" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/images/icons/facebook.png" alt="" srcset="">
                 Facebook
             </a>
