Update link sosmed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <div class="content-wrapper">
         <div class="links">
-            <a href="https://www.instagram.com/juliangerung/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/deanabnerjul/" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/images/icons/instagram.png" alt="" srcset="">
                 Instagram
             </a>
@@ -97,7 +97,7 @@
                 <img src="/assets/images/icons/github.png" alt="" srcset="">
                 Github
             </a>
-            <a href="https://twitter.com/superNaed" target="_blank" rel="noopener noreferrer">
+            <a href="https://twitter.com/deanabnerjul" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/images/icons/twitter.png" alt="" srcset="">
                 Twitter
             </a>
